--- a/index.html
+++ b/index.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Semester Notes</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Semester Notes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Select Semester</h1>
-  <div class="container">
-    <a href="subjects.html?sem=1" class="card">Semester 1</a>
-    <a href="subjects.html?sem=2" class="card">Semester 2</a>
-    <a href="subjects.html?sem=3" class="card">Semester 3</a>
-    <!-- Add more semesters if needed -->
-  </div>
+    <header class="header">
+    <h1>Semester Notes</h1>
+    <p>Select your semester to view subjects and papers</p>
+  </header>
+
+  <main class="container">
+    <h1>Select Semester</h1>
+        <div class="grid">
+      <a href="subjects.html?sem=1" class="card">
+        <strong>Semester 1</strong>
+        <div class="meta">View subjects for first semester</div>
+      </a>
+      <a href="subjects.html?sem=2" class="card">
+        <strong>Semester 2</strong>
+        <div class="meta">View subjects for second semester</div>
+      </a>
+      <a href="subjects.html?sem=3" class="card">
+        <strong>Semester 3</strong>
+        <div class="meta">View subjects for third semester</div>
+      </a>
+               <a href="subjects.html?sem=1" class="card">
+        <strong>Semester 4</strong>
+        <div class="meta">View subjects for first semester</div>
+      </a>
+      <a href="subjects.html?sem=2" class="card">
+        <strong>Semester 5</strong>
+        <div class="meta">View subjects for second semester</div>
+      </a>
+      <a href="subjects.html?sem=3" class="card">
+        <strong>Semester 6</strong>
+        <div class="meta">View subjects for third semester</div>
+      </a>
+          </div>
+  </main>
 </body>
 </html>
